codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_more_indicators.snap
---
source: tui/src/resume_picker.rs
expression: terminal.backend().to_string()
---
↑ more
› item-2                                                                        
  10m ago       ⌁ no cwd                          no branch                    

  item-3
↓ more
