codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_narrow_session.snap
---
source: tui/src/resume_picker.rs
expression: terminal.backend().to_string()
---
› Investigate picker expansion                            
  15m ago       ⌁ /tmp/codex                              
   fcoury/session-picker
