codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_preferred_session.snap
---
source: tui/src/resume_picker.rs
expression: snapshot
---
  Created  Updated        Branch  CWD          Conversation
> -        0 seconds ago  -       tmp/project  Recovered thread
  -        1 hour ago     -       -            Older session
