codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_screen.snap
---
source: tui/src/resume_picker.rs
assertion_line: 1487
expression: snapshot
---
Resume a previous session                                                       
Type to search                                                                  
  Updated  Branch  CWD  Conversation                                            
No sessions yet                                                                 
                                                                                
                                                                                
                                                                                
                                                                                
enter to resume     esc to start new     ctrl + c to quit
