codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_screen@windows.snap
---
source: tui/src/resume_picker.rs
expression: snapshot
---
Resume a previous session
Type to search
Showing sessions from all directories (--all) · Current directory: /tmp/project
  Updated  Branch  CWD  Conversation
No sessions yet



enter to resume     esc to start new     ctrl + c to quit
