codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_search_error.snap
---
source: tui/src/resume_picker.rs
expression: snapshot
---
Could not refresh sessions; showing the first page of indexed results
