codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_shared_provider_history.snap
---
source: tui/src/resume_picker.rs
expression: "render_picker_list(&state, 80, 12)"
---
› Other provider session                                                        
  1h ago         no branch
