codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_table.snap
---
source: tui/src/resume_picker.rs
expression: snapshot
---
  Fix resume picker timestamps
  42s ago       ⌁ no cwd                          no branch

› Investigate lazy pagination cap                                               
  35m ago       ⌁ no cwd                          no branch                    

  Explain the codebase
  2h ago        ⌁ no cwd                          no branch
